--- a/coprocessor-src/README
+++ b/coprocessor-src/README
@@ -1,7 +1,13 @@
-File describing this directory in Minisat development. Please add comments about single object implementations here!
+For the current version of the tool, please visit the web page "http://tools.computational-logic.org". 
+Please send bug reports to norbert.manthey@tu-dresden.de
+
+Building:
 
 
-New version of the preprocessor Coprocessor is developped here.
+
+
+Development:
+In this directory, the new version of the preprocessor Coprocessor is developped.
 
 The class is a friend class of the class Minisat, so that it has access to all its structures.
 
@@ -10,9 +16,6 @@ The data that is used to handle all clauses, literal counts, ... is implemented 
 Simplification methods, that should be integrated into Coprocessor shoud be implemented into an extra class (e.g. subsumption, variable elimination, ... ). Since the data about the formula is handled in an extra object, it could be passed to each technique separately without the single techniques knowing each other. Each technique implementation shoud decide by itself which objects should be stored permamnently (working queues), and which elements should be created only for performing the technique ones. Run time statistics should be implemented into the class of the specific technique.
 
 A global interface that should be implemented by each solving technique will come soon.
-
-
-
 
 Class descriptions:
 
@@ -25,9 +28,3 @@ Should provide methods for accessing this data, adding/deleting clauses from occ
 
 Technique:
 Super class for any class implementation of techniques. This class already copies the clause allocator and gives some more methods that are necessary for a nice interaction with the main preprocessor class. The method Technique::reset() should be overwritten by all classes the inherit from Technique
-
-Subsumption:
-Class that implements subsumption and strengthening. Queues for the two techniques should be provided and cleared only on request. There should be methods that can be used to add more clauses to the queues, so that they can be used by other techniques (e.g. variable elimination).
-
-Propagation:
-Class that implements unit propagation (with removing literals from clauses), probing (double-lookahead,...) and distillation/asymmtricBranching.
