made sending multi units possible, receive ee only if inprocessing is active

--- a/riss/CHANGES
+++ b/riss/CHANGES
@@ -5,3 +5,4 @@
  * parameter dependencies
  * parameter dependencies can be used to reduce printed help
  * can print parameters into PCS file, according to specified dependency level
+ * enables receiving equivalences before the first try to perform inprocessing
