Adds tikz schema

--- a/doc/tooldescriptions/Version505/tools-version-505.tex
+++ b/doc/tooldescriptions/Version505/tools-version-505.tex
@@ -3,6 +3,7 @@
 \usepackage{xspace}
 \usepackage{hyperref}
 \usepackage{todonotes}
+\usepackage{tikz}
 \usepackage[utf8]{inputenc}
 
 %  commands
@@ -150,6 +151,8 @@ Finally, the search configuration has been combined with the techniques of the f
 \riss and \coprocessor are implemented in \CC. 
 All simplification techniques inside \coprocessor are implemented in separate classes to increase the structure of the code. 
 \priss and \pcasso implement the parallel code for multi-core architectures with the pthreads library.
+ 
+\include{schema}
  
 \section{SAT Race 2015 Specifics}
 
