--- a/doc/tooldescriptions/Version505/local.bib
+++ b/doc/tooldescriptions/Version505/local.bib
@@ -2816,4 +2816,205 @@ address = {Dresden, Germany},
 	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/0166218X87900394},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1016/0166-218X(87)90039-4}}
 	
+@inproceedings{DBLP:conf/aaai/AudemardKS10,
+  author    = {Gilles Audemard and
+               George Katsirelos and
+               Laurent Simon},
+  title     = {A Restriction of Extended Resolution for Clause Learning {SAT} Solvers},
+  booktitle = {AAAI},
+  year      = {2010},
+  ee        = {http://www.aaai.org/ocs/index.php/AAAI/AAAI10/paper/view/1811},
+  crossref  = {DBLP:conf/aaai/2010},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@proceedings{DBLP:conf/aaai/2010,
+  editor    = {Maria Fox and
+               David Poole},
+  title     = {Proceedings of the Twenty-Fourth AAAI Conference on Artificial},
+  booktitle = {AAAI},
+  publisher = {AAAI Press},
+  year      = {2010},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
 
+
+@inproceedings{MextendedResolutionInModernSAT,
+ author = {Manthey, Norbert},
+ title = {Extended Resolution in Modern {SAT} Solving},
+ booktitle = {Joint Automated Reasoning Workshop and Deduktionstreffen},
+ series = {},
+ year = {2014},
+}
+
+@article{DBLP:journals/corr/JabbourLSS14,
+  author    = {Sa{\"{\i}}d Jabbour and
+               Jerry Lonlac and
+               Lakhdar Sais and
+               Yakoub Salhi},
+  title     = {Revisiting the Learned Clauses Database Reduction Strategies},
+  journal   = {CoRR},
+  volume    = {abs/1402.1956},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1402.1956},
+  timestamp = {Wed, 05 Mar 2014 14:43:44 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/JabbourLSS14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{inprocessingRules, 
+year={2012},
+isbn={978-3-642-31364-6},
+booktitle={Automated Reasoning},
+volume={7364},
+series={Lecture Notes in Computer Science},
+editor={Gramlich, Bernhard and Miller, Dale and Sattler, Uli},
+doi={10.1007/978-3-642-31365-3_28},
+title={Inprocessing Rules},
+url={http://dx.doi.org/10.1007/978-3-642-31365-3_28},
+publisher={Springer Berlin Heidelberg},
+author={Järvisalo, Matti and Heule, Marijn~J.H. and Biere, Armin},
+pages={355-370},
+language={English}
+}
+
+@inproceedings{MclePPdrat,
+ author = {Norbert Manthey and Tobias Philipp},
+ title = {Formula Simplifications as {DRAT} Derivations},
+ booktitle = {KI 2014: Advances in Artificial Intelligence},
+ series = {Lecture Notes in Computer Science},
+ volume = {8736},
+ editor = {Carsten Lutz and Michael Tielscher},
+ publisher={Springer Berlin Heidelberg},
+ pages={111--122},
+ language={English},
+ isbn={978-3-319-11205-3},
+ year = {2014},
+}
+
+@inproceedings{DBLP:conf/sat/WieringaH13,
+year={2013},
+isbn={978-3-642-39070-8},
+booktitle={Theory and Applications of Satisfiability Testing -- SAT 2013},
+volume={7962},
+series={Lecture Notes in Computer Science},
+editor={Järvisalo, Matti and Van Gelder, Allen},
+doi={10.1007/978-3-642-39071-5_10},
+title={Concurrent Clause Strengthening},
+url={http://dx.doi.org/10.1007/978-3-642-39071-5_10},
+publisher={Springer Berlin Heidelberg},
+author={Wieringa, Siert and Heljanko, Keijo},
+pages={116--132},
+language={English}
+}
+
+@incollection{glucose4sharing,
+year={2014},
+isbn={978-3-319-09283-6},
+booktitle={Theory and Applications of Satisfiability Testing – SAT 2014},
+volume={8561},
+series={Lecture Notes in Computer Science},
+editor={Sinz, Carsten and Egly, Uwe},
+doi={10.1007/978-3-319-09284-3_15},
+title={Lazy Clause Exchange Policy for Parallel SAT Solvers},
+url={http://dx.doi.org/10.1007/978-3-319-09284-3_15},
+publisher={Springer International Publishing},
+author={Audemard, Gilles and Simon, Laurent},
+pages={197-205},
+language={English}
+}
+
+@inproceedings{Miterative-splitting,
+year={2012},
+isbn={978-3-642-31611-1},
+booktitle={Theory and Applications of Satisfiability Testing -- SAT 2012},
+volume={7317},
+series={Lecture Notes in Computer Science},
+editor={Cimatti, Alessandro and Sebastiani, Roberto},
+doi={10.1007/978-3-642-31612-8_17},
+title={Designing Scalable Parallel {SAT} Solvers},
+url={http://dx.doi.org/10.1007/978-3-642-31612-8_17},
+publisher={Springer Berlin Heidelberg},
+author={Hyvärinen, Antti E.J. and Manthey, Norbert},
+pages={214--227},
+language={English}
+}
+
+@inproceedings{Mblackbox,
+  author    = {Enrique Alfonso and Norbert Manthey},
+  title     = {New {CNF} Features and Formula Classification},
+  booktitle = {POS-14},
+  editor    = {Daniel Le Berre},
+  series    = {EPiC Series},
+  volume    = {27},
+  pages     = {57--71},
+  year      = {2014},
+  publisher = {EasyChair},
+  bibsource = {EasyChair, http://www.easychair.org},
+  issn      = {2040-557X},
+}
+
+@inproceedings{pcasso2014, 
+author = {Davide Lanti and Ahmed Irfan and Norbert Manthey}, 
+title = {{Pcasso} -- a {P}arallel {C}ooperAtive {S}at {SO}lver}, 
+year = {2014}, 
+pages = {56}, 
+crossref = {sc2014proceedings}, 
+}
+
+ @inproceedings{Mriss427-2014, 
+author = {Norbert Manthey}, 
+title = {{Riss 4.27}}, 
+year = {2014}, 
+pages = {65--67}, 
+crossref = {sc2014proceedings}, 
+}
+
+@inproceedings{MRissBlackbox-2014, 
+author = {Enrique M. Alfonso and Norbert Manthey}, 
+title = {{Riss 4.27 BlackBox}}, 
+year = {2014}, 
+pages = {68--69}, 
+crossref = {sc2014proceedings}, 
+}
+
+
+
+ 
+@book{sc2014proceedings, 
+title = {Proceedings of {SAT} {Competition} 2014}, 
+editor = {Anton Belov and Daniel Diepold and Marijn~J.H. Heule and Matti J\"arvisalo}, 
+series = {Department of Computer Science Series of Publications B}, 
+volume = {B-2014-2}, 
+publisher = {University of Helsinki, Helsinki, Finland}, 
+year = {2014}, 
+}
+
+@inproceedings{Mbva,
+year={2013},
+isbn={978-3-642-39610-6},
+booktitle={Hardware and Software: Verification and Testing},
+volume={7857},
+series={Lecture Notes in Computer Science},
+editor={Biere, Armin and Nahir, Amir and Vos, Tanja},
+doi={10.1007/978-3-642-39611-3_14},
+title={Automated Reencoding of {Boolean} Formulas},
+url={http://dx.doi.org/10.1007/978-3-642-39611-3_14},
+publisher={Springer Berlin Heidelberg},
+author={Manthey, Norbert and Heule, Marijn J.H. and Biere, Armin},
+pages={102--117},
+language={English}
+}
+
+@InProceedings{portfolioSlowdown, 
+  author    = {Martin Aigner and Armin Biere and Christoph Kirsch and Aina Niemetz and Mathias Preiner},
+  title     = {Analysis of Portfolio-Style Parallel {SAT} Solving on Current Multi-Core Architectures},
+  booktitle = {POS-13},
+  editor    = {Daniel Le Berre},
+  series    = {EPiC Series},
+  volume    = {29},
+  pages     = {28--40},
+  year      = {2014},
+  publisher = {EasyChair},
+  bibsource = {EasyChair, http://www.easychair.org},
+  issn      = {2040-557X},
+}
