--- a/riss/CHANGES
+++ b/riss/CHANGES
@@ -1,5 +1,8 @@
 # ChangeLog for riss
 
+ * print PCS always uses current value of printed option
+ * allow to decide whether LBD or activity should be used for clause removal
+ * use binary clause reason structure, handles binary reasons implicitely
  * add option to run DPLL instead of CDCL ( -dpll )
  * model enumeration with blocking clauses, and with backtracking
  * added restart switching heuristics
